# MSFS-Turnaround

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.claude/: settings.local.json
apps/bridge/: CMakeLists.txt
apps/bridge/include/msfs_turnaround/: aircraft_telemetry.hpp  landing_analysis.hpp  simconnect_client.hpp  websocket_server.hpp
apps/bridge/src/: landing_analysis.cpp  main.cpp  simconnect_client.cpp  websocket_server.cpp
apps/bridge/src/aircraft/: AircraftAdapter.hpp  AircraftAdapterCapabilities.hpp  AircraftAdapterRegistry.cpp  AircraftAdapterRegistry.hpp  AircraftIdentity.cpp  AircraftIdentity.hpp  FenixAircraftAdapter.cpp  FenixAircraftAdapter.hpp  GenericAircraftAdapter.cpp  GenericAircraftAdapter.hpp
apps/bridge/src/approach/: ApproachGuidance.cpp  ApproachGuidance.hpp  Geo.cpp  Geo.hpp  StableApproachMonitor.cpp  StableApproachMonitor.hpp
apps/bridge/src/navdata/: Airport.hpp  NavDatabase.cpp  NavDatabase.hpp  RunwayEnd.hpp
apps/bridge/src/scenario/: AircraftAdapter.hpp  ApproachScenario.cpp  ApproachScenario.hpp  GenericAircraftAdapter.cpp  GenericAircraftAdapter.hpp  ScenarioSpawner.cpp  ScenarioSpawner.hpp
apps/bridge/src/spawn/: AircraftConfigurator.cpp  AircraftConfigurator.hpp  ApproachEnergyState.cpp  ApproachEnergyState.hpp  ApproachProfiles.cpp  ApproachProfiles.hpp  ApproachSpawnManager.cpp  ApproachSpawnManager.hpp  ApproachSpawnStateMachine.cpp  ApproachSpawnStateMachine.hpp  ReleaseController.cpp  ReleaseController.hpp  SpawnFreezeController.cpp  SpawnFreezeController.hpp  SpawnReadinessChecker.cpp  SpawnReadinessChecker.hpp
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ApproachPanel.tsx  DataCell.tsx  LandingAnalysisPanel.tsx  TelemetryPanel.tsx
apps/desktop/src/hooks/: useBridgeTelemetry.ts  useSettings.ts
apps/desktop/src/layout/: AppShell.tsx  Sidebar.tsx  TopWindowBar.tsx
apps/desktop/src/screens/: ApproachSetup.tsx  Dashboard.tsx  LandingAnalysis.tsx  LiveMonitor.tsx  ScenarioSetup.tsx  Settings.tsx  Tutorial.tsx  common.tsx
apps/desktop/src/sim/: format.ts  useSim.ts
apps/desktop/src/types/: telemetry.ts
docs/: spawn-test-checklist.md
scripts/: build_navdata.py
